[build-system]
requires = [
  "setuptools >= 42",
  "wheel >= 0.29.0",
  "setuptools_scm[toml] >= 3.4",
  "protobuf >= 3.14.0",
  "anyio == 2.0.2",
  "llist >= 0.6",
  "mypy==0.790",
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "dirty-tag"
write_to = "m3db/version.py"

[tool.isort]
src_paths = "m3db"
skip_gitignore = true
line_length = 99
multi_line_output = 4

[tool.autopep8]
max_line_length = 99

[tool.coverage.run]
source = ["m3db"]
relative_files = true

[tool.coverage.report]
show_missing = true
