[build-system]
requires = [
  "setuptools",
  "wheel",
  "setuptools_scm[toml]"
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "dirty-tag"
write_to = "m3db/version.py"

[tool.isort]
src_paths = "m3db"
skip_gitignore = true
line_length = 99
multi_line_output = 4

[tool.black]
line-length = 88
target-version = ['py37']

[tool.coverage.run]
source = ["m3db"]
relative_files = true

[tool.coverage.report]
show_missing = true
